--- a/CarService-SPA/src/app/client/home/register/register.component.html
+++ b/CarService-SPA/src/app/client/home/register/register.component.html
@@ -1,25 +1,102 @@
 <div class="row justify-content-center">
-  <form class="col-4" #registerForm="ngForm" (ngSubmit)="register()">
+  <form class="col-4" [formGroup]="registerForm" (ngSubmit)="register()">
     <h2 class="text-center text-primary">Register</h2>
     <hr>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <input [ngClass]="{'is-invalid': registerForm.get('firstname').errors && registerForm.get('firstname').touched}"
+          class="form-control" placeholder="First Name" formControlName="firstname">
+        <div class="invalid-feedback"
+          *ngIf="registerForm.get('firstname').touched && registerForm.get('firstname').hasError('required')">First Name
+          is required</div>
+      </div>
 
-    <div class="form-group">
-      <input type="text" class="form-control" required name="username" [(ngModel)]="model.username"
-        placeholder="Username">
+      <div class="form-group col-md-6">
+        <input [ngClass]="{'is-invalid': registerForm.get('lastname').errors && registerForm.get('lastname').touched}"
+          class="form-control" placeholder="Last Name" formControlName="lastname">
+        <div class="invalid-feedback"
+          *ngIf="registerForm.get('lastname').touched && registerForm.get('lastname').hasError('required')">Last Name is
+          required</div>
+      </div>
     </div>
 
     <div class="form-group">
-      <input type="password" class="form-control" required name="password" [(ngModel)]="model.password"
-        placeholder="Password">
+      <label class="control-label" style="margin-right:10px">Gender: </label>
+      <label class="radio-inline">
+        <input class="mr-3" type="radio" value="male" formControlName="gender">Male
+      </label>
+      <label class="radio-inline ml-3">
+        <input class="mr-3" type="radio" value="female" formControlName="gender">Female
+      </label>
+    </div>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <input [ngClass]="{'is-invalid': registerForm.get('email').errors && registerForm.get('email').touched}"
+          type="email" class="form-control" placeholder="Email@example.com" formControlName="email">
+        <div class="invalid-feedback"
+          *ngIf="registerForm.get('email').touched && registerForm.get('email').hasError('required')">Email is
+          required</div>
+      </div>
+
+      <div class="form-group col-md-6">
+        <input
+          [ngClass]="{'is-invalid': registerForm.get('phoneNumber').errors && registerForm.get('phoneNumber').touched}"
+          type="number" class="form-control" placeholder="Phone Number" formControlName="phoneNumber">
+        <div class="invalid-feedback"
+          *ngIf="registerForm.get('phoneNumber').touched && registerForm.get('phoneNumber').hasError('required')">Phone
+          Number is required</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <input [ngClass]="{'is-invalid': registerForm.get('address').errors && registerForm.get('address').touched}"
+        class="form-control" placeholder="Address" formControlName="address">
+      <div class="invalid-feedback"
+        *ngIf="registerForm.get('address').touched && registerForm.get('address').hasError('required')">Address is
+        required</div>
+    </div>
+
+    <div class="form-group">
+      <input type="text"
+        [ngClass]="{'is-invalid': registerForm.get('username').errors && registerForm.get('username').touched}"
+        class="form-control is-invalid" formControlName="username" placeholder="Username">
+      <div class="invalid-feedback">Please choose a name</div>
+    </div>
+
+    <div class="form-group">
+      <input type="password"
+        [ngClass]="{'is-invalid': registerForm.get('password').errors && registerForm.get('password').touched}"
+        class="form-control" formControlName="password" placeholder="Password">
+      <div class="invalid-feedback"
+        *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched">Password is
+        required</div>
+      <div class="invalid-feedback"
+        *ngIf="registerForm.get('password').hasError('minlenght') && registerForm.get('password').touched">Password must
+        be at least 8 characters</div>
+      <div class="invalid-feedback"
+        *ngIf="registerForm.get('password').hasError('maxlenght') && registerForm.get('password').touched">Password
+        cannot exceed 20 characters</div>
+    </div>
+
+    <div class="form-group">
+      <input type="password" [ngClass]="{'is-invalid': registerForm.get('confirmPassword').errors && registerForm.get('confirmPassword').touched 
+      || registerForm.get('confirmPassword').touched && registerForm.hasError('mismatch')}" class="form-control"
+        formControlName="confirmPassword" placeholder="Confirm Password">
+      <div class="invalid-feedback"
+        *ngIf="registerForm.get('confirmPassword').hasError('required') && registerForm.get('confirmPassword').touched">
+        Password is
+        required</div>
+      <div class="invalid-feedback"
+        *ngIf="registerForm.hasError('mismatch') && registerForm.get('confirmPassword').touched">
+        Password must match</div>
     </div>
 
     <div class="form-group text-center">
-      <button class="btn btn-success" type="submit">Register</button>
+      <button class="btn btn-success" type="submit" [disabled]="!registerForm.valid">Register</button>
       <button class="btn btn-default" type="button" [routerLink]="['/']">Cancel</button>
     </div>
 
     <div class="form-group">
-        <a [routerLink]="['/login']">Already have an account? Login here</a>
-      </div>
+      <a [routerLink]="['/login']">Already have an account? Login here</a>
+    </div>
   </form>
 </div>
