--- a/CarService-SPA/src/app/admin/dashboard/automotives/automotive-editor/automotive-editor.component.html
+++ b/CarService-SPA/src/app/admin/dashboard/automotives/automotive-editor/automotive-editor.component.html
@@ -59,30 +59,13 @@
                             </select>
                         </div>
                     </div>
-                    <!-- <div class="row form-group">
-                        <div class="col col-md-3">
-                            <label for="file-input" class=" form-control-label">File input</label>
-                        </div>
-                        <div class="col-12 col-md-9">
-                            <input type="file" id="file-input" name="file-input" class="form-control-file">
-                        </div>
-                    </div>
-                    <div class="row form-group">
-                        <div class="col col-md-3">
-                            <label for="file-multiple-input" class=" form-control-label">Multiple File input</label>
-                        </div>
-                        <div class="col-12 col-md-9">
-                            <input type="file" id="file-multiple-input" name="file-multiple-input" multiple=""
-                                class="form-control-file">
-                        </div>
-                    </div> -->
                 </form>
             </div>
             <div class="card-footer">
                 <button form="autoEdit" type="submit" class="btn btn-primary btn-sm">
                     <i class="fa fa-dot-circle-o"></i> Submit
                 </button>
-                <button form="autoEdit" type="reset" class="btn btn-danger btn-sm">
+                <button #resetBtn form="autoEdit" type="reset" class="btn btn-danger btn-sm">
                     <i class="fa fa-ban"></i> Reset
                 </button>
             </div>
