--- a/CarService-SPA/src/app/admin/dashboard/services/services.component.html
+++ b/CarService-SPA/src/app/admin/dashboard/services/services.component.html
@@ -2,27 +2,97 @@
   <div class="main-content">
     <div class="section__content section__content--p30">
       <div class="container-fluid">
-        <div class="col-lg-12">
-          <h3 class="title-5 m-b-35">Services</h3>
-          <div class="table-responsive table--no-card m-b-30">
-            <table class="table table-borderless table-striped table-earning">
-              <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>name</th>
-                  <th>description</th>
-                  <th class="text-right">price</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let service of services">
-                  <td>{{service.id}}</td>
-                  <td>{{service.name}}</td>
-                  <td>{{service.description}}</td>
-                  <td class="text-right">{{service.price}}</td>
-                </tr>
-              </tbody>
-            </table>
+        <div class="row">
+          <div class="col-md-12">
+            <!-- DATA TABLE -->
+            <h3 class="title-5 m-b-35">services</h3>
+            <div class="table-data__tool">
+              <div class="table-data__tool-left">
+                <div class="rs-select2--light rs-select2--md">
+                  <select class="js-select2" name="property">
+                    <option selected="selected">All Properties</option>
+                    <option value="">Option 1</option>
+                    <option value="">Option 2</option>
+                  </select>
+                  <div class="dropDownSelect2"></div>
+                </div>
+                <div class="rs-select2--light rs-select2--sm">
+                  <select class="js-select2" name="time">
+                    <option selected="selected">Today</option>
+                    <option value="">3 Days</option>
+                    <option value="">1 Week</option>
+                  </select>
+                  <div class="dropDownSelect2"></div>
+                </div>
+                <button class="au-btn-filter">
+                  <i class="zmdi zmdi-filter-list"></i>filters</button>
+              </div>
+              <div class="table-data__tool-right">
+                <button (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed"
+                  aria-controls="collapseBasic" class="au-btn au-btn-icon au-btn--green au-btn--small">
+                  <i class="zmdi zmdi-plus"></i>add item</button>
+                <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
+                  <select class="js-select2" name="type">
+                    <option selected="selected">Export</option>
+                    <option value="">Option 1</option>
+                    <option value="">Option 2</option>
+                  </select>
+                  <div class="dropDownSelect2"></div>
+                </div>
+              </div>
+            </div>
+            <div class="table-responsive table-responsive-data2">
+              <div id="collapseBasic" [collapse]="isCollapsed" [isAnimated]="true">
+                <div class="well well-lg card card-block card-header">
+                  <app-service-editor [services]="services"></app-service-editor>
+                </div>
+              </div>
+              <table class="table table-data2">
+                <thead>
+                  <tr>
+                    <th>
+                      <label class="au-checkbox">
+                        <input type="checkbox">
+                        <span class="au-checkmark"></span>
+                      </label>
+                    </th>
+                    <th>name</th>
+                    <th>description</th>
+                    <th>price</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let service of services" class="tr-shadow">
+                    <td>
+                      <label class="au-checkbox">
+                        <input type="checkbox">
+                        <span class="au-checkmark"></span>
+                      </label>
+                    </td>
+                    <td>{{service.name}}</td>
+                    <td>{{service.description}}</td>
+                    <td>{{service.price}}</td>
+                    <td>
+                      <div class="table-data-feature">
+                        <button class="item" data-toggle="tooltip" data-placement="top" title="Edit"
+                        (click)="openModalWithDetailComponent(service)">
+                          <i class="zmdi zmdi-edit"></i>
+                        </button>
+                        <button class="item" data-toggle="tooltip" data-placement="top" title="Delete"
+                        (click)="openModalWithDeleteComponent(service)">
+                          <i class="zmdi zmdi-delete"></i>
+                        </button>
+                        <button class="item" data-toggle="tooltip" data-placement="top" title="More">
+                          <i class="zmdi zmdi-more"></i>
+                        </button>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- END DATA TABLE -->
           </div>
         </div>
       </div>
