--- a/CarService-SPA/src/app/client/home/home.component.html
+++ b/CarService-SPA/src/app/client/home/home.component.html
@@ -2,7 +2,8 @@
 <section class="slide1">
   <div class="wrap-slick1">
     <div class="slick1">
-      <div class="item-slick1 item1-slick1" style="background-image: url(../../../../../assets/client/images/master-slide-02.jpg);">
+      <div class="item-slick1 item1-slick1"
+        style="background-image: url(../../../../../assets/client/images/master-slide-02.jpg);">
         <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
           <span class="caption1-slide1 m-text1 t-center animated visible-false m-b-15" data-appear="fadeInDown">
             Women Collection 2018
@@ -21,7 +22,8 @@
         </div>
       </div>
 
-      <div class="item-slick1 item2-slick1" style="background-image: url(../../../../../assets/client/images/master-slide-03.jpg);">
+      <div class="item-slick1 item2-slick1"
+        style="background-image: url(../../../../../assets/client/images/master-slide-03.jpg);">
         <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
           <span class="caption1-slide1 m-text1 t-center animated visible-false m-b-15" data-appear="rollIn">
             Women Collection 2018
@@ -40,7 +42,8 @@
         </div>
       </div>
 
-      <div class="item-slick1 item3-slick1" style="background-image: url(../../../../../assets/client/images/master-slide-04.jpg);">
+      <div class="item-slick1 item3-slick1"
+        style="background-image: url(../../../../../assets/client/images/master-slide-04.jpg);">
         <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
           <span class="caption1-slide1 m-text1 t-center animated visible-false m-b-15" data-appear="rotateInDownLeft">
             Women Collection 2018
@@ -175,7 +178,7 @@
           <!-- Block2 -->
           <div class="block2">
             <div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelnew">
-              <img src="../../../../../assets/client/images/item-02.jpg" alt="IMG-PRODUCT">
+              <img src="{{part.photos[0].url}}" alt="IMG-PRODUCT">
 
               <div class="block2-overlay trans-0-4">
                 <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
@@ -194,11 +197,11 @@
 
             <div class="block2-txt p-t-20">
               <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Herschel supply co 25l
+                {{part.name}}
               </a>
 
               <span class="block2-price m-text6 p-r-5">
-                $75.00
+                ${{part.currentPrice}}
               </span>
             </div>
           </div>
@@ -568,7 +571,8 @@
             <span class="s-text6">on</span> <span class="s-text7">July 22, 2017</span>
 
             <p class="s-text8 p-t-16">
-              Duis ut velit gravida nibh bibendum commodo. Sus-pendisse pellentesque mattis augue id euismod. Inter-dum et malesuada fames
+              Duis ut velit gravida nibh bibendum commodo. Sus-pendisse pellentesque mattis augue id euismod. Inter-dum
+              et malesuada fames
             </p>
           </div>
         </div>
@@ -592,7 +596,8 @@
             <span class="s-text6">on</span> <span class="s-text7">July 18, 2017</span>
 
             <p class="s-text8 p-t-16">
-              Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit ame
+              Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus.
+              Nullam nec ornare tellus, ac fringilla lacus. Ut sit ame
             </p>
           </div>
         </div>
@@ -616,7 +621,8 @@
             <span class="s-text6">on</span> <span class="s-text7">July 2, 2017</span>
 
             <p class="s-text8 p-t-16">
-              Proin nec vehicula lorem, a efficitur ex. Nam vehicula nulla vel erat tincidunt, sed hendrerit ligula porttitor. Fusce sit amet maximus nunc
+              Proin nec vehicula lorem, a efficitur ex. Nam vehicula nulla vel erat tincidunt, sed hendrerit ligula
+              porttitor. Fusce sit amet maximus nunc
             </p>
           </div>
         </div>
@@ -646,7 +652,8 @@
 
         <div class="block4-overlay-txt trans-0-4 p-l-40 p-r-25 p-b-30">
           <p class="s-text10 m-b-15 h-size1 of-hidden">
-            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
+            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam
+            nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
           </p>
 
           <span class="s-text9">
@@ -668,7 +675,8 @@
 
         <div class="block4-overlay-txt trans-0-4 p-l-40 p-r-25 p-b-30">
           <p class="s-text10 m-b-15 h-size1 of-hidden">
-            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
+            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam
+            nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
           </p>
 
           <span class="s-text9">
@@ -690,7 +698,8 @@
 
         <div class="block4-overlay-txt trans-0-4 p-l-40 p-r-25 p-b-30">
           <p class="s-text10 m-b-15 h-size1 of-hidden">
-            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
+            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam
+            nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
           </p>
 
           <span class="s-text9">
@@ -712,7 +721,8 @@
 
         <div class="block4-overlay-txt trans-0-4 p-l-40 p-r-25 p-b-30">
           <p class="s-text10 m-b-15 h-size1 of-hidden">
-            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
+            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam
+            nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
           </p>
 
           <span class="s-text9">
@@ -734,7 +744,8 @@
 
         <div class="block4-overlay-txt trans-0-4 p-l-40 p-r-25 p-b-30">
           <p class="s-text10 m-b-15 h-size1 of-hidden">
-            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
+            Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam
+            nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
           </p>
 
           <span class="s-text9">
