--- a/CarService-SPA/src/app/admin/dashboard/automotives/type-editor/type-editor.component.html
+++ b/CarService-SPA/src/app/admin/dashboard/automotives/type-editor/type-editor.component.html
@@ -38,7 +38,7 @@
         <button type="submit" form="editType" class="btn btn-primary btn-sm">
           <i class="fa fa-dot-circle-o"></i> Submit
         </button>
-        <button type="reset" form="editType" class="btn btn-danger btn-sm">
+        <button #resetBtn type="reset" form="editType" class="btn btn-danger btn-sm">
           <i class="fa fa-ban"></i> Reset
         </button>
       </div>
