--- a/CarService-SPA/src/app/admin/dashboard/automotives/_template/modal-detail.html
+++ b/CarService-SPA/src/app/admin/dashboard/automotives/_template/modal-detail.html
@@ -4,49 +4,45 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form #partDetail="ngForm" id="partDetail" (ngSubmit)="saveChanges(part.id)">
+<form #partDetail="ngForm" id="partDetail" (ngSubmit)="saveChanges()">
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label>Product Name</label>
-                <input type="text" class="form-control" placeholder="Product Name" [(ngModel)]="displayPart.name"
+                <input type="text" class="form-control" placeholder="Product Name" [(ngModel)]="model.name"
                     name="partName">
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword4">Current Price</label>
-                <input type="number" class="form-control" placeholder="0.00" [(ngModel)]="displayPart.currentPrice"
+                <input type="number" class="form-control" placeholder="0.00" [(ngModel)]="model.currentPrice"
                     name="partPrice">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-12">
                 <label for="textarea-input" class="form-control-label">Description</label>
-                <textarea required [(ngModel)]="displayPart.description" name="description" id="partDescription" rows="9"
+                <textarea required [(ngModel)]="model.description" name="description" id="partDescription" rows="9"
                     placeholder="Content..." class="form-control"></textarea>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
                 <div class="col col-md-3">
-                    <label for="select" class=" form-control-label">Type</label>
+                    <label for="select" class="form-control-label">Type</label>
                 </div>
                 <div class="col-12 col-md-9">
-                    <select [(ngModel)]="displayPart.automotivePartType.id" name="select" id="select-type"
-                        class="form-control">
-                        <option [ngValue]="" disabled selected hidden>Choose product type</option>
+                    <select [(ngModel)]="model.automotivePartTypeId" name="select-type" id="select-type" class="form-control">
                         <option *ngFor="let type of types" [ngValue]="type.id">{{type.typeName}}</option>
                     </select>
                 </div>
             </div>
             <div class="form-group col-md-6">
                 <div class="col col-md-3">
-                    <label for="select" class=" form-control-label">Supplier</label>
+                    <label for="select" class="form-control-label">Supplier</label>
                 </div>
                 <div class="col-12 col-md-9">
-                    <select [(ngModel)]="displayPart.supplier.id" name="select" id="select-supplier" class="form-control">
-                        <option [selected]="true" disabled selected hidden>Choose supplier</option>
-                        <option *ngFor="let supplier of suppliers" [ngValue]="supplier.id">{{supplier.name}}
-                        </option>
+                    <select [(ngModel)]="model.supplierId" name="select-supplier" id="select-supplier" class="form-control">
+                        <option *ngFor="let supplier of suppliers" [ngValue]="supplier.id">{{supplier.name}}</option>
                     </select>
                 </div>
             </div>
