--- a/CarService-SPA/src/app/admin/dashboard/automotives/automotives.component.html
+++ b/CarService-SPA/src/app/admin/dashboard/automotives/automotives.component.html
@@ -91,7 +91,7 @@
                       <div class="row">
                         <div style="cursor: pointer;" class="col-md-3" *ngFor="let photo of part.photos">
                           <img (click)="openModalWithDeletePhotoComponent(part, photo)" src="{{photo.url}}"
-                            class="img-thumbnail p-1" style="width: 50px;" alt="">
+                            class="img-thumbnail p-1" style="height: 50px;" alt="">
                         </div>
                       </div>
                     </td>
