--- a/CarService-SPA/src/app/admin/dashboard/automotives/types/_template/modal-detail.html
+++ b/CarService-SPA/src/app/admin/dashboard/automotives/types/_template/modal-detail.html
@@ -15,7 +15,7 @@
                     </div>
                   </div>
         
-                  <div class="row form-group">
+                  <!-- <div class="row form-group">
                     <div class="col col-md-3">
                       <label for="text-input" class=" form-control-label">Car Model</label>
                     </div>
@@ -31,7 +31,7 @@
                     <div class="col-12 col-md-9">
                       <input type="text" required [(ngModel)]="model.brand" id="brand-text-input" name="brand-text-input" placeholder="" class="form-control">
                     </div>
-                  </div>
+                  </div> -->
     </div>
 </form>
 <div class="modal-footer">
