--- a/CarService-SPA/src/app/client/cart/cart.component.html
+++ b/CarService-SPA/src/app/client/cart/cart.component.html
@@ -20,14 +20,14 @@
             <th class="column-5">Total</th>
           </tr>
 
-          <tr class="table-row">
+          <tr class="table-row" *ngFor="let cartItem of cartItems">
             <td class="column-1">
               <div class="cart-img-product b-rad-4 o-f-hidden">
-                <img src="../../../../../assets/client/images/item-10.jpg" alt="IMG-PRODUCT">
+                <img src="{{cartItem.photoUrl}}" alt="IMG-PRODUCT">
               </div>
             </td>
-            <td class="column-2">Men Tshirt</td>
-            <td class="column-3">$36.00</td>
+            <td class="column-2">{{cartItem.name}}</td>
+            <td class="column-3">${{cartItem.price}}</td>
             <td class="column-4">
               <div class="flex-w bo5 of-hidden w-size17">
                 <button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
@@ -41,31 +41,7 @@
                 </button>
               </div>
             </td>
-            <td class="column-5">$36.00</td>
-          </tr>
-
-          <tr class="table-row">
-            <td class="column-1">
-              <div class="cart-img-product b-rad-4 o-f-hidden">
-                <img src="../../../../../assets/client/images/item-05.jpg" alt="IMG-PRODUCT">
-              </div>
-            </td>
-            <td class="column-2">Mug Adventure</td>
-            <td class="column-3">$16.00</td>
-            <td class="column-4">
-              <div class="flex-w bo5 of-hidden w-size17">
-                <button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
-                  <i class="fs-12 fa fa-minus" aria-hidden="true"></i>
-                </button>
-
-                <input class="size8 m-text18 t-center num-product" type="number" name="num-product2" value="1">
-
-                <button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
-                  <i class="fs-12 fa fa-plus" aria-hidden="true"></i>
-                </button>
-              </div>
-            </td>
-            <td class="column-5">$16.00</td>
+            <td class="column-5">${{cartItem.price * cartItem.quantity}}</td>
           </tr>
         </table>
       </div>
@@ -106,7 +82,7 @@
         </span>
 
         <span class="m-text21 w-size20 w-full-sm">
-          $39.00
+          ${{total}}
         </span>
       </div>
 
@@ -158,13 +134,13 @@
         </span>
 
         <span class="m-text21 w-size20 w-full-sm">
-          $39.00
+          ${{total}}
         </span>
       </div>
 
       <div class="size15 trans-0-4">
         <!-- Button -->
-        <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+        <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" [routerLink]="['/checkout']">
           Proceed to Checkout
         </button>
       </div>
