--- a/CarService-SPA/src/app/client/home/home.component.html
+++ b/CarService-SPA/src/app/client/home/home.component.html
@@ -181,7 +181,7 @@
                   <div class="block2-btn-addcart w-size1 trans-0-4">
                     <!-- Button -->
                     <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
-                    (click)="addToCart(part.id, part.currentPrice)">
+                    (click)="addToCart(part)">
                       Add to Cart
                     </button>
                   </div>
