--- a/CarService-SPA/src/app/client/product-detail/product-detail.component.html
+++ b/CarService-SPA/src/app/client/product-detail/product-detail.component.html
@@ -69,7 +69,7 @@
             <div class="btn-addcart-product-detail size9 trans-0-4 m-t-10 m-b-10">
               <!-- Button -->
               <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4"
-              (click)="addToCart(part.id)">
+              (click)="addToCart(part)">
                 Add to Cart
               </button>
             </div>
