--- a/CarService-SPA/src/app/client/_footer/footer.component.html
+++ b/CarService-SPA/src/app/client/_footer/footer.component.html
@@ -29,25 +29,25 @@
       <ul>
         <li class="p-b-9">
           <a href="#" class="s-text7">
-            Men
+            Wheel
           </a>
         </li>
 
         <li class="p-b-9">
           <a href="#" class="s-text7">
-            Women
+            Seat
           </a>
         </li>
 
         <li class="p-b-9">
           <a href="#" class="s-text7">
-            Dresses
+            Mirror
           </a>
         </li>
 
         <li class="p-b-9">
           <a href="#" class="s-text7">
-            Sunglasses
+            Steering Wheel
           </a>
         </li>
       </ul>
