--- a/CarService-SPA/src/app/client/my-orders/my-orders.component.html
+++ b/CarService-SPA/src/app/client/my-orders/my-orders.component.html
@@ -1,4 +1,5 @@
 <div class="container" style="min-height: 500px;">
+  <h2 class="m-5 text-center">My Orders</h2>
   <table id="example" class="table table-striped table-bordered" style="width:100%">
     <thead>
       <tr>
@@ -7,19 +8,22 @@
         <th>Status</th>
         <th>Order Detail</th>
         <th>Order Total</th>
-        <th>Action</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let order of myOrders">
         <td *ngIf="order.addressOptional == null">{{order.address}}</td>
-        <td *ngIf="order.addressOptional != null">Main Address: {{order.address}} <br>Other Address: {{order.addressOptional}}</td>
+        <td *ngIf="order.addressOptional != null">Main Address: {{order.address}} <br>Other Address:
+          {{order.addressOptional}}</td>
         <td>{{order.orderPlacedTime | date: 'medium'}}</td>
         <td>{{order.status}}</td>
-        <td><span *ngFor="let item of order.productOrderDetails"
-          class="block-email">{{item.name}} x {{item.quantity}}</span></td>
-        <td>{{order.orderTotal}}</td>
-        <td>Buttons go here</td>
+        <td><span *ngFor="let item of order.productOrderDetails" class="block-email">{{item.name}} x
+            {{item.quantity}}</span></td>
+        <td>${{order.orderTotal}}</td>
+        <td>
+          <button (click)="cancelOrderFromUser(order)">Cancel Order</button>
+        </td>
       </tr>
   </table>
 </div>
