--- a/CarService-SPA/src/app/client/_nav/nav.component.html
+++ b/CarService-SPA/src/app/client/_nav/nav.component.html
@@ -39,25 +39,20 @@
       <div class="wrap_menu">
         <nav class="menu">
           <ul class="main_menu">
-            <li>
-              <a href="index.html">Home</a>
-              <ul class="sub_menu">
-                <li><a [routerLink]="['/register']">Register</a></li>
-                <li><a href="home-02.html">Homepage V2</a></li>
-                <li><a href="home-03.html">Homepage V3</a></li>
-              </ul>
+            <li routerLinkActive="sale-noti">
+              <a [routerLink]="['/']">Home</a>
             </li>
 
-            <li>
-              <a href="product.html">Shop</a>
+            <li routerLinkActive="sale-noti">
+              <a [routerLink]="['/']">Shop</a>
             </li>
 
             <li class="sale-noti">
-              <a href="product.html">Sale</a>
+              <a [routerLink]="['/']">Sale</a>
             </li>
 
             <li>
-              <a href="cart.html">Features</a>
+              <a [routerLink]="['/services']">Services</a>
             </li>
 
             <li>
